@startuml

interface Bloque{
    ejecutar(Personaje)
    opuesto(): Bloque

}

class BloqueIterativo implements Bloque{
    # List<Bloque>
    + recorrer(Personaje)
    + agregarBloque(AlgoBlocks)
    + obtenerLista(): List<Bloque>
}
BloqueIterativo o--- Personaje
BloqueIterativo ...> AlgoBlocks

class BloqueInverso extends BloqueIterativo{
    + invertir(List<Bloque>)
}

class BloqueRepetir extends BloqueIterativo{
    - int
    + BloqueRepetir(int)
}

@enduml